Refine API Schema
